# Locally-driven-LLM-evaluation-lab

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  first_task.py  first_task_v2.py  first_task_v2_commented.py  main.py  pyproject.toml
context/: builder.py
core/: __init__.py  config.py  models.py  router.py
data/repos/basic_python_repo/: sample_module.py
data/repos/basic_python_repo/tests/: test_sample_module.py
data/sqlite/: repo.db
docker/: docker-compose.yml
evaluation_suite/: README.md  batch_runner.py  models.py  output_parser.py  patch_engine.py  result_store.py  runner.py  scorer.py  task_loader.py  utils.py  validator.py  workspace_manager.py
evaluation_suite/tasks/task_01/: reference.py  spec.json  task_01.py  task_01_reference.py  task_01_spec.json  template.py
evaluation_suite/tasks/task_01/tests/: __init__.py  test_task.py
llm-baseline/: evaluator.py  logs.jsonl  main.py  shared_paths.py
llm-baseline/logs/: run_f6bba2d059d3435c98a42d8c96ca7b1a.jsonl
llm-baseline/prompts/: coding.json  explanation.json
repo_intel/: __init__.py  core.py  extraction.py  index.py  parsing.py  retrieval.py  scanner.py
repo_intel_tests/: conftest.py  test_index.py  test_parsing.py  test_retrieval.py  test_scanner.py
runtime/: app.py  controller.py  graph.py  llm.py  prompts.py  queue.py  state.py  tracing.py
runtime/tasks/: __init__.py  base.py  documentation.py  refactoring.py  utils.py
tests/: conftest.py  test_output_parser.py  test_patch_engine.py  test_runtime_controller.py  test_runtime_graph.py  test_runtime_integration.py  test_runtime_tasks.py  test_scorer.py  test_task_loader.py  test_workspace_manager.py
tools/: git.py  grep.py
