[project]
name = "locally-driven-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.13.2",
    "libcst>=1.8.6",
    "loguru>=0.7.3",
    "pathspec>=1.1.1",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.0",
    "sqlite-utils>=3.39",
    "tqdm>=4.67.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
]
